[Eunchae] MainPage Button

--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,4 @@
 REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id
 REACT_APP_KAKAO_APP_KEY=your-kakao-app-key
 REACT_APP_NAVER_CLIENT_ID=your-naver-client-id
+REACT_APP_API_KEY=your_api_key_here
