--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.3.1",
     "react-kakao-login": "^2.1.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
