--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,18 +1,7 @@
 {
   "short_name": "DiaryApp",
   "name": "Diary Application",
-  "icons": [
-    {
-      "src": "icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "icons": [],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
